up Book.java add new field